--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     </head>
     <body>
         <div class="toolbar">
-            <div><img src="icons/save.svg" alt="Save"></div>
-            <div><img src="icons/undo.svg" alt="Undo"></div>
-            <div><img src="icons/redo.svg" alt="Redo"></div>
-            <div><img src="icons/copy.svg" alt="Copy"></div>
-            <div><img src="icons/paste.svg" alt="Paste"></div>
-            <div><img src="icons/cut.svg" alt="Cut"></div>
-            <div><img src="icons/bold.svg" alt="Bold"></div>
-            <div><img src="icons/italic.svg" alt="Italic"></div>
-            <div><img src="icons/underline.svg" alt="Underline"></div>
-            <div><img src="icons/time_date.svg" alt="Time/Date"></div>
-            <div><img src="icons/find_replace.svg" alt="Find/Replace"></div>
-            <div><img src="icons/right_align.svg" alt="Right-align"></div>
-            <div><img src="icons/center_alignment.svg" alt="Center/Justify"></div>
-            <div><img src="icons/left_align.svg" alt="Left-align"></div>
-            <div><img src="icons/zoomoption.svg" alt="Search"></div>
+            <div><img src="default/icons/save.svg" alt="Save"></div>
+            <div><img src="default/icons/undo.svg" alt="Undo"></div>
+            <div><img src="default/icons/redo.svg" alt="Redo"></div>
+            <div><img src="default/icons/copy.svg" alt="Copy"></div>
+            <div><img src="default/icons/paste.svg" alt="Paste"></div>
+            <div><img src="default/icons/cut.svg" alt="Cut"></div>
+            <div><img src="default/icons/bold.svg" alt="Bold"></div>
+            <div><img src="default/icons/italic.svg" alt="Italic"></div>
+            <div><img src="default/icons/underline.svg" alt="Underline"></div>
+            <div><img src="default/icons/time_date.svg" alt="Time/Date"></div>
+            <div><img src="default/icons/find_replace.svg" alt="Find/Replace"></div>
+            <div><img src="default/icons/right_align.svg" alt="Right-align"></div>
+            <div><img src="default/icons/center_alignment.svg" alt="Center/Justify"></div>
+            <div><img src="default/icons/left_align.svg" alt="Left-align"></div>
+            <div><img src="default/icons/zoomoption.svg" alt="Search"></div>
         </div>
         <div><textarea class="editor" id="PlainTextEdit"></textarea></div>
     </body>
