--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <meta charset="utf-8">
         <title>PaperPro</title>
         <link rel="stylesheet" href="default/styles/stylesheet.min.css">
+        <script src="default/background/actions.js"></script>
     </head>
     <body>
         <div class="toolbar">
-            <div><img src="default/icons/save.svg" alt="Save"></div>
+            <div onclick="saveTextAsFile()"><img src="default/icons/save.svg" alt="Save"></div>
             <div><img src="default/icons/undo.svg" alt="Undo"></div>
             <div><img src="default/icons/redo.svg" alt="Redo"></div>
             <div><img src="default/icons/copy.svg" alt="Copy"></div>
