--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en-Us">
     <head>
         <meta charset="utf-8">
-        <title>PaperPro</title>
-        <link rel="stylesheet" href="default/styles/stylesheet.min.css">
-        <script src="default/background/actions.js"></script>
+        <link rel="stylesheet" href="default/css/stylesheet.min.css">
+        <script src="default/js/main.js"></script>
     </head>
     <body>
-        <div class="toolbar">
+        <div class="toolbar" oncontextmenu="return false">
             <div onclick="saveTextAsFile()"><img src="default/icons/save.svg" alt="Save"></div>
             <div><img src="default/icons/undo.svg" alt="Undo"></div>
             <div><img src="default/icons/redo.svg" alt="Redo"></div>
