--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="default/js/main.js"></script>
     </head>
     <body>
-        <div class="toolbar-top" oncontextmenu="return false">
+        <div class="toolbar" oncontextmenu="return false">
             <div onclick="saveTextAsFile()"><img src="default/icons/save.svg" alt="Save"></div>
             <div onclick="underdev()"><img src="default/icons/undo.svg" alt="Undo"></div>
             <div onclick="underdev()"><img src="default/icons/redo.svg" alt="Redo"></div>
@@ -24,7 +24,7 @@
             <div onclick="underdev()"><img src="default/icons/zoomoption.svg" alt="Search"></div>
             <div onclick="underdev()"><img src="default/icons/gdrive.svg" alt="Google Drive"></div>
         </div>
-        <div>
+        <div class="text">
             <textarea id="PlainTextEdit"></textarea>
         </div>
     </body>
