Remove textarea spell check

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div onclick="underdev()"><img src="default/icons/zoomoption.svg" alt="Search"></div>
         </div>
         <div class="text">
-            <textarea id="PlainTextEdit"></textarea>
+            <textarea id="PlainTextEdit" spellcheck="false"></textarea>
         </div>
     </body>
 </html>
