--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
         <script src="default/js/main.js"></script>
     </head>
     <body>
+
         <div class="toolbar" oncontextmenu="return false">
-            <div onclick="saveTextAsFile()"><img src="default/icons/save.svg" alt="Save"></div>
+            <div onclick="DefaultFileName()"><a href="#save-file-dialog"><img src="default/icons/save.svg" alt="Save"></a></div>
             <div onclick="underdev()"><img src="default/icons/undo.svg" alt="Undo"></div>
             <div onclick="underdev()"><img src="default/icons/redo.svg" alt="Redo"></div>
             <div onclick="underdev()"><img src="default/icons/copy.svg" alt="Copy"></div>
@@ -18,13 +19,28 @@
             <div onclick="underline()"><img src="default/icons/underline.svg" alt="Underline"></div>
             <div onclick="date_time()"><img src="default/icons/time_date.svg" alt="Time/Date"></div>
             <div onclick="underdev()"><img src="default/icons/find_replace.svg" alt="Find/Replace"></div>
-            <div onclick="right_align()"><img src="default/icons/right_align.svg" alt="Right-align"></div>
-            <div onclick="center_align()"><img src="default/icons/center_alignment.svg" alt="Center/Justify"></div>
             <div onclick="left_align()"><img src="default/icons/left_align.svg" alt="Left-align"></div>
+            <div onclick="center_align()"><img src="default/icons/center_alignment.svg" alt="Center/Justify"></div>
+            <div onclick="right_align()"><img src="default/icons/right_align.svg" alt="Right-align"></div>
             <div onclick="underdev()"><img src="default/icons/zoomoption.svg" alt="Search"></div>
         </div>
+        
         <div class="text">
             <textarea id="PlainTextEdit" spellcheck="false"></textarea>
         </div>
+
+        <div id="save-file-dialog" class="overlay">
+            <div class="popup">
+                <div id="img">
+                    <img src="default/images/01.png">
+                </div>
+                <a class="close" href="#">&times;</a>
+                <div class="content">
+                    <input type="text" id="filename">
+                    <button onclick="saveTextAsFile()">Save</button> 
+                </div>
+            </div>
+        </div>
+
     </body>
 </html>
